fixed skills layout issue

--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -3,7 +3,8 @@
 }
 
 .skillLogos {
-  margin: 50px 0;
+  max-width: 1050px;
+  margin: 50px auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 25px;
